# sql-autoresearch

./: .gitignore  CLAUDE.md  README.md  program.md  pyproject.toml
corpus/: README.md
scripts/: bootstrap.sh  setup_testdb.sql
src/sql_autoresearch/: benchmark.py  cli.py  equivalence.py  generate.py  models.py  optimizer.py  safety.py
src/sql_autoresearch/adapters/: postgres.py
src/sql_autoresearch/prompts/: rewrite_query.md
tests/: conftest.py  test_benchmark.py  test_equivalence.py  test_generate.py  test_optimizer.py  test_postgres.py  test_safety.py
