[project]
name = "sql-autoresearch"
version = "0.1.0"
description = "Automated SQL query optimizer for PostgreSQL"
requires-python = ">=3.12"
dependencies = [
    "pglast>=6,<7",
    "psycopg[binary]>=3.2,<4",
    "anthropic>=0.49,<1",
]

[project.scripts]
sql-autoresearch = "sql_autoresearch.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=8,<9",
    "pytest-mock>=3,<4",
    "ruff>=0.9,<1",
]
